complete responsive design for challenge 1

--- a/module-1/html-css-soln/index.html
+++ b/module-1/html-css-soln/index.html
@@ -35,6 +35,9 @@
     <div class="logo">
       <a href="#"><img src="images/logo.svg" alt=""></a>
     </div>
+    <div class="hamburger">
+      <img src="images/icon-menu.svg" alt="">
+    </div>
     <div class="links">
       <ul>
         <li><a href="#">Features <img src="images/icon-arrow-down.svg" alt=""></a></li>
@@ -62,6 +65,7 @@
             <button class="btn"> Learn more</button>
           </div>
           <div class="clients">
+            <div class="clients-wrapper">
             <div class="image">
               <img src="images/client-databiz.svg" alt="databiz client logo">
             </div>
@@ -75,10 +79,11 @@
               <img src="images/client-maker.svg" alt="maker client logo">
             </div>
           </div>
+          </div>
         </div>
-        <div>
+        <div class="hero-image">
           <picture>
-            <source media="(min-width: 375px)" srcset="images/image-hero-desktop.png">
+            <source media="(min-width: 500px)" srcset="images/image-hero-desktop.png">
             <img src="images/image-hero-mobile.png" alt="hero image">
           </picture>
         </div>
